# xiaoai-cli

./: .gitignore  API.md  API_QUICKSTART.md  Cargo.toml  IMPLEMENTATION.md  KEYWORD_WATCH.md  LICENSE  README.md  config.json  flask_example.py  keywords.json  test_api.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs  ws_server.rs
miai/: Cargo.toml
miai/examples/: hello.rs  save_and_load.rs
miai/src/: error.rs  lib.rs  login.rs  watcher.rs  xiaoai.rs
miai/src/mina/: device.rs
mina/: Cargo.toml
mina/src/: mina.rs
mina/src/mina/: mina.rs
src/: error.rs  lib.rs  mina.rs
src/mina/: mina.rs
xiaoai/: Cargo.toml
xiaoai/src/: lib.rs  xiaoai.rs
