[package]
name = "miservice"
version = "0.1.0"
edition = "2024"

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
base64ct = { version = "1.7.3", features = ["alloc"] }
cookie_store = "0.21.1"
log = "0.4.27"
md-5 = "0.10.6"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["cookies", "json"] }
reqwest_cookie_store = "0.8.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
thiserror = "2.0.12"
urlencoding = "2.1.3"
utoipa = { workspace = true }
