[package]
name = "miai"
version = "0.1.0"
edition = "2024"

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
base64ct = { version = "1.8.0", features = ["alloc"] }
cookie_store = "0.21.1"
log = "0.4.28"
md-5 = "0.10.6"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["cookies", "json"] }
reqwest_cookie_store = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
thiserror = "2.0.17"
url = "2.5.7"
urlencoding = "2.1.3"

[dev-dependencies]
env_logger = "0.11.8"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
